--- a/regada/android/app/src/main/assets/capacitor.config.json
+++ b/regada/android/app/src/main/assets/capacitor.config.json
@@ -4,7 +4,8 @@
 	"webDir": "build",
 	"bundledWebRuntime": false,
 	"server": {
-		"url" : "http://192.168.0.100:8181",
-		"cleartext": true
+		"url": "http://192.168.15.100:8100",
+		"cleartext": true,
+		"originalUrl": "http://192.168.0.100:8181"
 	}
 }
