--- a/regada/android/app/src/main/assets/capacitor.config.json
+++ b/regada/android/app/src/main/assets/capacitor.config.json
@@ -6,7 +6,8 @@
 	"npmClient": "npm",
 	"cordova": {},
 	"server": {
-		"url": "http://192.168.226.243:3000",
-		"cleartext": true
+		"url": "http://192.168.118.243:8100",
+		"cleartext": true,
+		"originalUrl": "http://192.168.118.243:3000"
 	}
 }
