--- a/regada/capacitor.config.json
+++ b/regada/capacitor.config.json
@@ -6,7 +6,7 @@
 	"npmClient": "npm",
 	"cordova": {},
 	"server": {
-		"url" : "http://192.168.15.102:3000",
+		"url" : "https://merry-souffle-b827ef.netlify.app",
 		"cleartext": true
 	}
 }
