--- a/regada/package.json
+++ b/regada/package.json
@@ -12,7 +12,9 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/file": "^5.36.0",
     "@ionic-native/photo-viewer": "^5.36.0",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/web-intent": "^5.36.0",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
@@ -27,6 +29,7 @@
     "@types/react-router-dom": "^5.1.7",
     "com-darryncampbell-cordova-plugin-intent": "^2.2.0",
     "com-sarriaroman-photoviewer": "^1.2.5",
+    "file-saver": "^2.0.5",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -75,6 +78,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.3",
+    "@types/file-saver": "^2.0.5",
     "http-server": "^14.1.0"
   },
   "description": "An Ionic project"
