--- a/regada/android/app/src/main/assets/capacitor.config.json
+++ b/regada/android/app/src/main/assets/capacitor.config.json
@@ -6,7 +6,7 @@
 	"npmClient": "npm",
 	"cordova": {},
 	"server": {
-		"url": "https://merry-souffle-b827ef.netlify.app",
-		"cleartext": true
+		"cleartext": true,
+		"url": "https://merry-souffle-b827ef.netlify.app"
 	}
 }
